test behavior in case of unsupported http scheme defined in openapi.yaml document
